# sample_gpt2

./: README.md  pyproject.toml
gpt2/: first_notebook.ipynb  gpt2.txt  gtp2.ipynb  simple_gpt2.ipynb
