[tool.poetry]
name = "gpt2"
version = "0.1.0"
description = ""
authors = ["akihiro okayama <akihiro.ob@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.0.0"
torchvision = "^0.15.1"
transformers = "^4.27.4"
sentencepiece = "^0.1.97"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
